added oneline in index.html and khanh.cc

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ This is the demo for Git
 This is the demo for git
 This sis the demo for Git
 the demooo
+THis is the new one
 This is just a MARK
 This is the demo
 Holy shit no editor goddammit
