--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 This is just for the demo of gi
 This is the demo for Git
 this is the dmeo for Git
-This is the demo for Git
-This is the demo for git
-This sis the demo for Git
 the demooo
-This is just the demo for Git
-THis is the new one
-This is just a MARK
+This is the fuckin demo for Git
 This is the demo
 Holy shit no editor goddammit
 whast the he lsis the ihs
 this is a span element
+This is the demo for Git
