added one line to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ this is the dmeo for Git
 the demooo
 This is the demo
 Holy shit no editor goddammit
+This is just for demo of Git
 whast the he lsis the ihs
 this is a span element
 This is the demo for Git
